# llm-traffic-intersection

./: .env.example  .gitignore  README.md  mlflow.db  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.dvc/: config
.github/workflows/: ci_cd.yml
.zen/: config.yaml
data/feature_store/: feature_store.py  feature_store.yaml
data/masri_finetune/: eval_only_masri.csv  fine_tuned_model_id.txt  test_scenarios.csv  train_data.jsonl  val_data.jsonl
data/processed/: features.csv.dvc  features.parquet  finetune_train.jsonl  finetune_train_v2.jsonl
data/raw/: generated_dataset.csv.dvc
deployment/docker/: Dockerfile  docker-compose.yml  prometheus.yml
mlartifacts/1/050c3ad02f464838a2bb028aa1c679fb/artifacts/: predictions.csv
mlartifacts/1/0f1d93b24cb340aea9c15491db2428e1/artifacts/: predictions.csv
mlartifacts/1/106d8457841648dcb82b7a6516c26d6b/artifacts/: predictions.csv
mlartifacts/1/2053dbff86c040c18b0ab57365d23392/artifacts/: evaluation_results.json
model/: model_card.md
references/: references.bib
reports/: REPORT.md  bias_audit_report.json  emissions.csv  evaluation_summary.json  explainability_report.json
reports/monitoring/: drift_report.html  predictions.jsonl  trigger_log.jsonl
reports/offline_evaluation/: emission_report.json  evaluation_data.json  report.json
reports/online_evaluation/: phoenix_evaluation_summary.json
reports/online_evaluation/AB_testing/: report.json
reports/online_evaluation/bias_audit/: report.json
reports/online_evaluation/explainability/: feature_influence.md  report.html  report.json
reports/online_evaluation/robustness/: report.json
scripts/: ab_test.py  deploy_hf.py  explain.py  masri_evaluate.py  masri_finetune.py  run_all_pipelines.py  run_pipelines.py
src/api/: app.py  streamlit_app.py
src/data/: generate_data.py  validate_data.py
src/evaluation/: evaluate.py  phoenix_ab_test.py  phoenix_bias_audit.py  phoenix_explainability.py  phoenix_robustness.py  run_phoenix_evaluations.py
src/features/: preprocess.py
src/models/: llm_model.py  train.py
src/monitoring/: ab_test.py  explain.py  monitor.py
src/pipelines/: data_pipeline.py  evaluation_pipeline.py  monitoring_pipeline.py  run_all_pipelines.py  serving_pipeline.py  training_pipeline.py
src/poc/: conflict_detection.py  conflict_detection_orig.py  data_generation.py  poc_app.py  requirements.txt  utils.py  visualization_orig.py
src/utils/: generate_architecture_diagram.py
tests/integration/: test_api.py
tests/unit/: test_conflict_detection.py  test_data.py  test_features.py
(+17 files in other folders)
