[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-traffic-intersection"
version = "1.0.0"
description = "LLM-Driven Agents for Traffic Intersection Conflict Resolution"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
exclude = ["notebooks/", ".venv/", "build/"]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''/(\.git|\.venv|build|dist|notebooks)/'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
