[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "llm-traffic-intersection"
version = "1.0.0"
description = "LLM-Driven Agents for Traffic Intersection Conflict Resolution"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = [
    "E501",   # line too long (some lines are inherently long: URLs, dicts, f-strings)
    "E741",   # ambiguous variable name 'l' (used in lane list comprehensions)
    "E701",   # multiple statements on one line (intentional for compact test code)
    "N803",   # argument name 'X' should be lowercase (sklearn convention)
    "N806",   # variable in function should be lowercase (constants in visualization)
    "F401",   # unused import (conditional imports in try/except blocks)
    "F841",   # local variable assigned but never used
    "UP006",  # use dict/list instead of Dict/List (from original files)
    "UP035",  # deprecated typing imports (from original files)
    "UP045",  # use X | None instead of Optional (from original files)
]

[tool.black]
line-length = 100
target-version = ["py311"]
exclude = '''/(\.git|\.venv|build|dist|notebooks)/'''

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*", "**/__init__.py"]

[tool.coverage.report]
show_missing = true
fail_under = 70
